k3s/manifests/bitwarden/statefulset.yml
---
apiVersion: "apps/v1"
kind: StatefulSet
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      serviceAccountName: bitwarden
      securityContext:
        fsGroup: 33
        runAsUser: 33
      containers:
        - image: vaultwarden/server:1.29.2
          imagePullPolicy: IfNotPresent
          name: bitwarden
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 3012
              name: websocket
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: bitwarden-volume
          resources:
            limits:
              cpu: 300m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 256Mi
      volumes:
        - name: bitwarden-volume
          persistentVolumeClaim:
            claimName: bitwarden-volume
