k3s/manifests/bitwarden/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  type: ClusterIP
  selector:
    app: bitwarden
  ports:
    - name: http
      port: 8080
      protocol: TCP
    - name: websocket
      port: 3012
      protocol: TCP
